[MS-597] 3rd issue fix (advantages icons align)

--- a/src/sass/emotion.scss
+++ b/src/sass/emotion.scss
@@ -144,7 +144,7 @@
     }
     .li {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       flex-wrap: nowrap;
       column-gap: 1.5rem;
     }
